<resources>
    <string name="app_name">SportiveApp</string>
    <string name="forgot_password">forgot_password</string>
    <string name="log_in">log_in</string>
    <string name="login">login</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_email">enter_your_email</string>
    <string name="name">Name</string>
    <string name="mobile_number">mobile_number</string>
    <string name="center">Center</string>
    <string name="user">User</string>
    <string name="already_have_account">already_have_account</string>
    <string name="your_location">your location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full name</string>
    <string name="edite">Edite</string>
    <string name="change">Change</string>
    <string name="_40_km">40 km</string>
    <string name="center_name">Center name</string>
    <string name="type_of_center">type of center</string>
    <string name="_40km_nearby">40km nearby</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_center_home">CenterHomeActivity</string>
    <string name="contact_us">Contact us</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log out</string>
    <string name="edit">edit</string>
</resources>
