<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_phone_black_24dp"
                android:title="@string/contact_us" />

        </menu>
    </item>

</menu>
