<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RegisterActivity">

    <View
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:layout_alignParentEnd="true">

    </View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp">

            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp" />

            <RelativeLayout
                android:id="@+id/RV_OR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/sign_up_design"
                tools:ignore="RtlHardcoded">

                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="15dp"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textSize="12sp"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_below="@id/full_name">

                </View>

                <EditText
                    android:id="@+id/email"
                    android:layout_below="@id/view1"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:hint="@string/enter_your_email"
                    android:drawablePadding="15dp"
                    android:textSize="12sp"
                    android:layout_marginLeft="3dp"
                    android:background="@drawable/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:layout_marginStart="3dp"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_below="@id/email">

                </View>

                <EditText
                    android:id="@+id/password"
                    android:background="@drawable/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:layout_marginLeft="3dp"
                    android:layout_below="@id/view2"
                    android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                    android:hint="............"
                    android:drawablePadding="15dp"
                    android:textSize="12sp"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock_open_black_24dp"
                    android:layout_marginStart="3dp"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_below="@id/password">

                </View>

                <EditText
                    android:id="@+id/phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@id/view3"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:hint="@string/mobile_number"
                    android:textSize="12sp"
                    android:layout_marginLeft="3dp"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:inputType="phone"
                    android:drawableStart="@drawable/ic_phone_black_24dp"
                    android:layout_marginStart="3dp"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_below="@id/phone_num">

                </View>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_below="@id/view4"
                    android:id="@+id/lin_radio">

                    <RadioGroup
                        android:id="@+id/lin_one"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/center_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/center"
                            android:layout_marginTop="7dp"
                            android:textSize="12sp"
                            android:layout_marginLeft="3dp"
                            android:layout_marginStart="3dp"
                            tools:ignore="RtlHardcoded" />

                        <RadioButton
                            android:id="@+id/user_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/user"
                            android:layout_marginTop="7dp"
                            android:textSize="12sp"
                            android:layout_marginStart="20dp"
                            tools:ignore="RtlHardcoded" />
                    </RadioGroup>
                </LinearLayout>

                <View
                    android:id="@+id/view5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_below="@id/lin_radio">

                </View>
                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="gone"
                    android:layout_below="@id/view5"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_place_black_24dp"
                    android:hint="@string/your_location"
                    android:textSize="12sp"
                    android:layout_marginLeft="3dp"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:inputType="phone"
                    android:layout_marginBottom="10dp"
                    android:drawableStart="@drawable/ic_place_black_24dp"
                    android:layout_marginStart="3dp"
                    tools:ignore="RtlHardcoded" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/BTN_signUp_registar"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_design_curv"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_marginBottom="20dp"
                    android:layout_alignParentEnd="true" />


                <TextView
                    android:id="@+id/text_qs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="already_have_account ?"
                    android:textSize="12sp"
                    android:layout_marginStart="50dp"/>

                <TextView
                    android:id="@+id/text_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginStart="180dp"
                    android:text="@string/login"
                    android:textSize="12sp"
                    />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>